# Triangles

./: .gitignore  .gitmodules  KV.sh  README.md  debug-start.sh  debug_start.sh  format.sh  start.sh
.github/workflows/: ci.yaml
Src/: CMakeLists.txt
Src/cmake/: debug.cmake  logger.cmake  tree-2d-dump.cmake  tree-3d-dump.cmake
Src/cmake/tests/: e2e-tests.cmake  global.cmake  unit-tests.cmake
Src/cmake/tests/e2e/: create-all-e2e-tests.cmake
Src/cmake/tests/unit/: create-all-unit-tests.cmake  unit-tests.cmake
Src/debug/in/: run_test.in  run_test.sh.in
Src/debug/parse_program_output/: parse_result.py
Src/include/code-gen/octree/: generate_2d_dump.hpp
Src/include/create_run_program_file/cringe/: create_run_program_file.hpp
Src/include/geometry/: constants.hpp  relative_positions.hpp
Src/include/global/: custom_console_output.hpp  global.hpp
Src/modules/geometry/: line.cppm  octotree.cppm  plain.cppm  point.cppm  triangle.cppm
Src/modules/geometry/base_geometry_obj/: line.cppm  plain.cppm  point.cppm
Src/modules/geometry/global/: constants.cppm  relative_positions.cppm
Src/modules/geometry/tree/: octree.cppm
Src/modules/geometry/triangle/: triangle.cppm
Src/modules/math/: compare.cppm  linear_systems.cppm  matrix.cppm  vector.cppm
Src/modules/math/linear_algebra/: linear_systems.cppm
Src/modules/test/execute_test/: execute_test.cppm
Src/modules/test/flag_parse/: flag_parser.cppm  input_stream.cppm
Src/modules/test/global/: test_files.cppm
Src/modules/test/parse_result/: parse_test_result.cppm
Src/modules/test/read_input/: get_test_data.cppm  input_stream.cppm  read_test_answer.cppm  read_test_data.cppm
Src/src/: run_double_triangles.cpp  run_float_triangles.cpp
Src/src/flags_parser/: flags_parser.cppm
Src/src/geometry/base_geometry_obj/: line.cppm  plain.cppm  point.cppm
Src/src/geometry/global/: constants.cppm  relative_positions.cppm
Src/src/geometry/tree/: octree.cppm  vizualisation.cppm
Src/src/geometry/tree/viz/: camera.cppm  key_parser.cppm  window.cppm
Src/src/geometry/triangle/: triangle.cppm
Src/src/main/: run_float_triangles.cpp
Src/src/math/compare/: compare.cppm
Src/src/math/linear_algebra/: linear_systems.cppm  vector.cppm
Src/src/read_input/: read_input_data.cppm
Src/src/run_triangles_intersection/: run_triangles_intersection.cppm
tests/e2e/ans/: tmp.sh
tests/unit-tests/geometry/: unit_test_line.cpp  unit_test_octotree.cpp  unit_test_octree.cpp  unit_test_plain.cpp  unit_test_point.cpp  unit_test_triangles.cpp
tests/unit-tests/math/: unit_test_compare.cpp  unit_test_linear_system.cpp  unit_test_matrix.cpp  unit_test_vector.cpp
tests/unit-tests/read_input_data/: unit_test_read_input_data.cpp
tests/unit-tests/test/: unit_test_flag_parser.cpp  unit_test_get_test_data.cpp  unit_test_read_answer.cpp  unit_test_read_test_data.cpp
